PN-12684 Modifica generazione nuovo path per webhook stream
