# docs/openapi/api-internal-b2b-webhook-older-version.yaml
@@ -282,7 +282,79 @@ paths:
               schema:
                 $ref: 'remote-refs.yaml#/components/schemas/Problem'
 
+    '/delivery-progresses/v2.3/streams/{streamId}/events':
+      get:
+        summary: Leggi progressi notifiche
+        description: >-
+          Lettura degli eventi presenti nello stream di aggiornamenti con indicazione che
+          il mittente ha ricevuto e memorizzato l'evento identificato dal parametro _lastEventId_
+          e tutti gli eventi precedenti. Tali eventi potranno essere cancellati dallo stream.
+        tags:
+          - Events
+        operationId: consumeEventStreamV23
+        x-pagopa-lambda-name: 'pn-versioningV1V2WebhookLambda:live'
+        x-pagopa-lambda-account: core
+        parameters:
+          - $ref: '#/components/parameters/uidAuthFleet'          # NO EXTERNAL
+          - $ref: '#/components/parameters/cxTypeAuthFleet'       # NO EXTERNAL
+          - $ref: '#/components/parameters/cxIdAuthFleet'         # NO EXTERNAL
+          - $ref: '#/components/parameters/cxGroupsAuthFleet'         # NO EXTERNAL
+          - $ref: '#/components/parameters/headerApiVersion'         # NO EXTERNAL
+          - $ref: '#/components/parameters/pathStreamId'
+          - $ref: '#/components/parameters/queryLastEventId'
+        responses:
+          '200':
+            description: OK
+            headers:
+              retry-after:
+                schema:
+                  type: integer
+                  format: int32
+                description: >-
+                  Numero di millisecondi di attesa prima di effettuare una nuova lettura di eventi.
 
+                  Sarà valorizzato a zero se ci sono eventi in coda che non sono stati forniti per 
+                  raggiunta dimensione massima della risposta.
+
+                  Sarà maggiore di zero se gli eventi in coda sono stati tutti inviati.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/ProgressResponseV23"
+          '429':
+            description: Too Many Requests
+            headers:
+              retry-after:
+                schema:
+                  type: integer
+                  format: int32
+                description: >-
+                  Numero di millisecondi di attesa prima di effettuare una nuova lettura di eventi.
+          '400':
+            description: Invalid input
+            content:
+              application/problem+json:
+                schema:
+                  $ref: 'remote-refs.yaml#/components/schemas/Problem'
+          '403':
+            description: Not allowed to consume details
+            content:
+              application/problem+json:
+                schema:
+                  $ref: 'remote-refs.yaml#/components/schemas/Problem'
+          '404':
+            description: Stream not found
+            content:
+              application/problem+json:
+                schema:
+                  $ref: 'remote-refs.yaml#/components/schemas/Problem'
+          '500':
+            description: Internal Server Error
+            content:
+              application/problem+json:
+                schema:
+                  $ref: 'remote-refs.yaml#/components/schemas/Problem'
+                  
     ############################################################################################
     ###                INVIO DI EVENTI DA PARTE DELLA PUBBLICA AMMNISTRAZIONE                ###
     ############################################################################################
@@ -462,6 +534,11 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/ProgressResponseElement'
+    
+    ProgressResponseV23:
+      type: array
+      items:
+        $ref: '#/components/schemas/ProgressResponseElementV23'
 
     ProgressResponseElement:
       type: object
@@ -524,6 +601,58 @@ components:
           description: eventuali errori di validazione associati all'evento
           items:
             $ref: '#/components/schemas/RefusedReason'
+    
+    ProgressResponseElementV23:
+      type: object
+      required:
+        - eventId
+        - element
+      properties:
+        eventId:
+          description: >-
+            Elemento che garantisce univocità e ordinamento temporale all'interno dello stream
+          type: string
+        notificationRequestId:
+          description: Identificativo della richiesta di notifica
+          type: string
+        iun:
+          description: >-
+            Identificativo della notifica, presente solo se la richiesta di notifica è 
+            stata accettata.
+          type: string
+          maxLength: 25
+          pattern: ^[A-Z]{4}-[A-Z]{4}-[A-Z]{4}-[0-9]{6}-[A-Z]{1}-[0-9]{1}$
+        newStatus:
+          $ref: './schemas-pn-status.yaml#/components/schemas/NotificationStatus'
+        element:
+          $ref: './schemas-pn-timeline-older-version.yaml#/components/schemas/TimelineElementV23'
+        # proprietà necessarie per retro compatibilità nel transitorio, ma che non saranno esposte nella V23 # NO EXTERNAL
+        # potranno essere eliminate (assieme al RefusedReason) quando non saranno più presenti eventi della v1 # NO EXTERNAL
+        timestamp: # NO EXTERNAL
+          type: string                                                                                     # NO EXTERNAL
+          format: date-time                                                                                # NO EXTERNAL
+        timelineEventCategory: # NO EXTERNAL
+          $ref: './schemas-pn-timeline.yaml#/components/schemas/TimelineElementCategoryV23'                # NO EXTERNAL
+        recipientIndex: # NO EXTERNAL
+          type: integer                                                                                    # NO EXTERNAL
+          format: int32                                                                                    # NO EXTERNAL
+          minimum: 0                                                                                       # NO EXTERNAL
+        analogCost: # NO EXTERNAL
+          type: integer                                                                                    # NO EXTERNAL
+          format: int32                                                                                    # NO EXTERNAL
+        channel: # NO EXTERNAL
+          type: string                                                                                     # NO EXTERNAL
+        legalfactIds: # NO EXTERNAL
+          type: array                                                                                      # NO EXTERNAL
+          items: # NO EXTERNAL
+            type: string                                                                                   # NO EXTERNAL
+          example: [ "PN_LEGAL_FACTS-0002-9G2S-RK3M-JI62-JK9Q", "PN_LEGAL_FACTS-0002-9G2S-RK3M-JI62-JK9E" ]  # NO EXTERNAL
+          description: chiavi degli eventuali allegati associati all'evento                                # NO EXTERNAL
+        validationErrors: # NO EXTERNAL
+          type: array                                                                                      # NO EXTERNAL
+          description: eventuali errori di validazione associati all'evento                                # NO EXTERNAL
+          items: # NO EXTERNAL
+            $ref: '#/components/schemas/RefusedReason'                                                     # NO EXTERNAL
 
     RefusedReason:
       type: object
